@@ -8,62 +8,60 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @ApiStatus.Internal
 public class ClasspathUtils {
     public static List<Path> getRemapClasspath() throws IOException {
-        String remapClasspathFile = System.getProperty("fabric.remapClasspathFile");
+        var remapClasspathFile = System.getProperty("fabric.remapClasspathFile");
 
         if (remapClasspathFile == null) {
             System.out.println("remapClasspathFile is null! Falling back to ObjectShare.");
             return getClassPathFromObjectShare();
         }
 
-        String content = new String(Files.readAllBytes(Paths.get(remapClasspathFile)), StandardCharsets.UTF_8);
+        var content = Files.readString(Path.of(remapClasspathFile));
 
         return Arrays.stream(content.split(File.pathSeparator))
-                .map(Paths::get)
-                .collect(Collectors.toList());
+                .map(Path::of)
+                .toList();
     }
 
     public static @NotNull List<Path> getClassPathFromObjectShare() {
-        ObjectShare share = FabricLoader.getInstance().getObjectShare();
-        Object inputs = share.get("fabric-loader:inputGameJars");
-        List<Path> list = new ArrayList<>();
+        var share = FabricLoader.getInstance().getObjectShare();
+        var inputs = share.get("fabric-loader:inputGameJars");
+        var list = new ArrayList<Path>();
 
-        Object oldJar = FabricLoader.getInstance().getObjectShare().get("fabric-loader:inputGameJar");
+        var oldJar = FabricLoader.getInstance().getObjectShare().get("fabric-loader:inputGameJar");
+        var classPaths = FabricLauncherBase.getLauncher().getClassPath();
 
-        List<Path> classPaths = FabricLauncherBase.getLauncher().getClassPath();
+        if (inputs instanceof List<?> inputsList) {
+            var paths = (List<Path>) inputsList;
 
-        if (inputs instanceof List) {
-            List<Path> paths = (List<Path>) inputs;
-
-            if (oldJar instanceof Path) {
-                if (paths.get(0).toString().equals(oldJar.toString())) {
+            if (oldJar instanceof Path oldJarPath) {
+                if (paths.get(0).toString().equals(oldJarPath.toString())) {
                     list.addAll(paths);
                 } else {
-                    list.add((Path) oldJar);
+                    list.add(oldJarPath);
                 }
             } else {
                 list.addAll(paths);
             }
-        } else {
-            list.add((Path) oldJar);
+        } else if (oldJar instanceof Path oldJarPath) {
+            list.add(oldJarPath);
         }
 
         list.addAll(classPaths);
 
-        Object realmsJar = share.get("fabric-loader:inputRealmsJar");
-
-        if (realmsJar instanceof Path) list.add((Path) realmsJar);
+        Optional.ofNullable(share.get("fabric-loader:inputRealmsJar"))
+                .filter(Path.class::isInstance)
+                .map(Path.class::cast)
+                .ifPresent(list::add);
 
         return list;
     }
